--- a/installation.qmd
+++ b/installation.qmd
@@ -18,19 +18,19 @@ In this section, the aim is to have everyone setup with R, RStudio, and Quarto
 
 #### Windows
 
-https://cloud.r-project.org/bin/windows/
+[https://cloud.r-project.org/bin/windows/](https://cloud.r-project.org/bin/windows/)
 
 #### MacOS
 
-https://cloud.r-project.org/bin/macosx/
+[https://cloud.r-project.org/bin/macosx/](https://cloud.r-project.org/bin/macosx/)
 
 #### Linux
 
-https://cloud.r-project.org/bin/linux/
+[https://cloud.r-project.org/bin/linux/](https://cloud.r-project.org/bin/linux/)
 
 ### RStudio
 
-https://www.rstudio.com/products/rstudio/download/#download
+[https://posit.co/download/rstudio-desktop/#download](https://posit.co/download/rstudio-desktop/#download)
 
 ## Quarto
 
@@ -50,9 +50,28 @@ install.packages("usethis")
 
 ## A note on PDF
 
-Quarto documents can be compiled to PDF, which is a great feature. In order to convert the documents to PDF, they use a software called LaTeX (\LaTeX) (pronounced la-tek or lay-tek). 
+Quarto documents can be compiled to PDF, which is a great feature. In order to convert the documents to PDF, they use a software called LaTeX ($\LaTeX$) (pronounced la-tek or lay-tek - the `k` comes from the `X` being chi - $\chi$). 
 
-Installing LaTeX is thankfully handled when you install Quarto, as [Quarto includes a built-in Latexmk engine](https://quarto.org/docs/output-formats/pdf-engine.html#latexmk).
+Installing LaTeX is thankfully handled when you install Quarto, as [Quarto includes a built-in Latexmk engine](https://quarto.org/docs/output-formats/pdf-engine.html#latexmk). 
+
+### PDF / LaTeX Pain
+
+Installing LaTeX [can be a pain](https://yihui.name/tinytex/pain/), but thankfully Yihui Xie has put a lot of time and energy into making an easier way to install it - [`tinytex`](https://yihui.name/tinytex/). `tinytex` is an R package that installs a sane, lightweight (<200Mb) version of LaTeX. 
+
+```{r run-tiny-tex, eval = FALSE}
+tinytex::install_tinytex()
+```
+
+If you get the following error, **this is good**! As it means that TeX has already been installed:
+
+```
+Error: Detected an existing tlmgr at /usr/local/bin/tlmgr. It seems TeX Live has been installed (check tinytex::tinytex_root()). You have to uninstall it, or use install_tinytex(force = TRUE) if you are sure TinyTeX can override it (e.g., you are a PATH expert or installed TinyTeX previously).
+```
+
+### Problem solving with LaTeX
+
+If you have any problems with installing `tinytex`, I recommend you check out the [tinytex FAQ page](https://yihui.name/tinytex/faq/).
+
 
 ## Test Script
 
