--- a/using-qmd.qmd
+++ b/using-qmd.qmd
@@ -111,32 +111,35 @@ Code chunks are marked by three backticks and curly braces. We put the letter `r
 
 ## R
 
-````{verbatim, lang = "r"}
 ```{r}
 #| label: r-chunk-name
+#| echo: fenced
 # a code chunk
 ```
-````
 
 ## python
 
-````{verbatim, lang = "python"}
 ```{python}
 #| label: py-chunk-name
+#| echo: fenced
 # a code chunk
 ```
-````
 
 ## julia
 
-````{verbatim, lang = "julia"}
 ```{julia}
 #| label: julia-chunk-name
+#| echo: fenced
 # a code chunk
 ```
-````
 
 ::: 
+
+::: {.callout-caution collapse="true"}
+## This book currently focusses only on R
+
+Quarto provides support for Python, Julia, and Observable, which are all very powerful and awesome languages! However currently we will only be focussing on using R in this book. But I want to make sure that you know you can use python, or Julia, or Observable! More languages will be supported into the future, I believe.
+:::
 
 **a backtick** is a special character you might not have seen before, it is typically located under the tilde key (`~`). On USA / Australia keyboards, is under the escape key:
 
@@ -160,32 +163,29 @@ Every chunk should ideally have a name. As I've mentioned earlier, naming things
 
 You can control how the code is output by changing the code chunk options, which are written with a `#|`, called a "hash-pipe", since `#` is "hash", and `|` is "pipe", but might sometimes be called "bar" or "v-bar".
 
-````
 ```{r}
 #| label: read-gapminder
 #| eval: false
-#| echo: true
+#| echo: fenced
 gap <- read_csv("gapminder.csv")
 ```
-````
 
 A nice feature of Quarto + Rstudio is that they provide code completion when you start writing the code chunk options, and they will provide options when hitting "tab". 
-
-*gif showing autocomplete*
+*gif of this*
 
 In the past Rmarkdown required "TRUE" and "FALSE", but note that Quarto always uses "true" or "false" in lowercase, and never "yes" or "no".
 
 The code chunks you need to know about right now are:
 
-  * `cache`: true / false Do you want to save the output of the chunk so it doesn't have to run next time?
   * `eval`: true/false Do you want to evaluate the code?
   * `echo`: true/false Do you want to print the code?
+  * `cache`: true / false Do you want to save the output of the chunk so it doesn't have to run next time?
   * `include`: Do you want to include code output in the final output document? Setting to `false` means nothing is put into the output document, but the code is still run.
-  
+
 <!-- What are messages, warnings, errors, results? -->
 
-  <!-- * error: If you want R to stop on errors, set to `FALSE` -->
-  <!-- * warning: preserve warnings (produced by `warning()`). IF `FALSE`, all warnings will be printed in the console instead of the output document  -->
+  <!-- * error: If you want R to stop on errors, set to `false` -->
+  <!-- * warning: preserve warnings (produced by `warning()`). IF `false`, all warnings will be printed in the console instead of the output document  -->
   <!-- * message: Similar to warning, do you want to preserve messages provided by `message()`.  -->
 
 
@@ -201,76 +201,35 @@ You might want to run the code inline to name the number of variables or rows in
 
 > There are XXX observations in the airquality dataset, and XXX variables.
 
-You can call code "inline"  with the pattern:
+You can call code "inline" like so:
 
-```
-Here are some code things with language "lang": `` `{lang} code` ``.
-```
-
-Essentially instead of using three backticks to write multiple lines of code, you use a single backtick. You can think of this as a backtick being used inside text for a one liner, whereas creating a code fence with three backticks indicates something longer.
-
-::: {.panel-tabset group="engine"}
-
-## Python
-
-
-
-```` markdown
-```{{python}}
-py_heights = [153, 151, 156, 160, 171]
-import statistics
-py_mean = statistics.mean(py_heights)
-```
-
-The mean of these heights is `{python} py_mean`
 ````
-
-This syntax works for any Jupyter kernel---so for Julia you would write an inline expression as `` `{julia} j_mean` ``).
-
-## Knitr
-
-```` markdown
 ```{{r}}
 r_heights <- c(153, 151, 156, 160, 171)
 r_mean <- mean(r_heights)
 ```
 
-The mean of these heights is `{r} mean(c(153, 151, 156, 160, 171))`
+The mean of these heights is `{{r}} r_mean`
 ````
 
-:::
+Which will produce the following sentence:
 
+```{r}
+#| label: example-inline
+#| output: false
+#| echo: false
+r_heights <- c(153, 151, 156, 160, 171)
+r_mean <- mean(r_heights)
+```
 
-::: {.panel-tabset}
+> The mean of these heights is `{r} r_mean`
 
-## R
+Essentially, instead of using three backticks to write multiple lines of code, you use a single backtick. You can think of this as a backtick being used inside text for a one liner, whereas creating a code fence with three backticks indicates something longer.
 
 ````{verbatim, lang = "r"}
-
-There are `` `r nrow(airquality)` `` observations in the airquality dataset, 
-and `` `r ncol(airquality)` `` variables.
-
+There are `{{r}} nrow(airquality)` observations in the airquality dataset, 
+and `{{r}} ncol(airquality)` variables.
 ````
-
-## python
-
-````{verbatim, lang = "python"}
-```{python}
-#| label: py-chunk-name
-# a code chunk
-```
-````
-
-## julia
-
-````{verbatim, lang = "julia"}
-```{julia}
-#| label: julia-chunk-name
-# a code chunk
-```
-````
-
-::: 
 
 Which gives you the following sentence
 
@@ -278,20 +237,20 @@ Which gives you the following sentence
 
 What's great about this is that if your data changes upstream, then you don't need to work out where you mentioned your data, you just update the document.
 
-## Creating an rmarkdown document
+## Creating a Quarto document
 
 * Rstudio menu system
 * Explore the template provided by rstudio
 * Compile an rmarkdown document
 
-## Working with an rmarkdown document
+## Working with a Quarto document
 
-**Demo: Create an rmarkdown document in rstudio.**
+**Demo: Create a Quarto document in rstudio.**
 
 ### Your Turn {.exercise}
 
-1. Use the rstudio project you previously created, `rmd4sci-materials`, and create an rmarkdown document
-1. Run some brief summaries of the data in the rmarkdown document inside the `` ```{r chunk-part} ``
+1. Use the rstudio project you previously created, `qmd4sci-materials`, and create a Quarto document
+1. Run some brief summaries of the data in the Quarto document:
     - hist(data$)
     - How big is the data?
     - How many countries are there?
@@ -299,51 +258,56 @@ What's great about this is that if your data changes upstream, then you don't ne
     - How about the lowest GDP for Australia?
     - Where does Australia rank in GDP in 1997?
 
-<!-- # My philosophy on Rmarkdown -->
+<!-- # My philosophy on Quarto -->
 
 <!-- - Keep it simple -->
 <!-- - focus on content -->
 
-## Nick's rmarkdown hygiene recommendations
+## Nick's Quarto hygiene recommendations
 
-I highly recommend that each document you write has three chunks at the top.
+I highly recommend that each document you write has this YAML at the top to set some global options, and then two code chunks, one that loads all the packages, and another that specifies any functions you write.
+
+````
+---
+title: example
+format: 
+  html:
+    fig-align: center
+    fig-width: 4
+    fig-height: 4
+    fig-format: png
+execute:
+  echo: false
+  cache: true
+---
 
 
-````markdown
-
-`r ''````{r setup , include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, 
-                      fig.align = "center",
-                      fig.width = 4, 
-                      fig.height = 4, 
-                      dev = "png",
-                      cache = TRUE)
-```
-
-`r ''````{r library}
+```{{r}}
+#| label: library
 library(tidyverse)
 ```
 
-`r ''````{r functions}
+```{{r}}
+#| label: functions
 # A function to scale input to 0-1
 scale_01 <- function(x){
   (x - min(x, na.rm = TRUE)) / diff(range(x, na.rm = TRUE))
 }
 ```
 
-`r ''````{r read-data}
+```{{r}}
+#| label: read-data
 gapminder <- read_csv(here::here("data", "gapminder.csv"))
 ```
-
 ````
 
-In the `setup` chunk, you set the options that you want to define globally. In this case, I've told rmarkdown:
+In the YAML chunk under `execute`, you set the options that you want to define globally. In this case, I've told Quarto:
 
-* `echo = FALSE`: I don't want any code printed by setting `echo = FALSE`.
-* `fig.align = "center"` Align my figures in the center
-* `fig.width = 4` & `fig.height = 4`. Set the width and height to 4 inches. 
-*  `dev = "png"`. Save the images as PNG
-* `cache = TRUE`. Save the output results of all my chunks so that they don't need to be run again.
+* `fig-align: center` Align my figures in the center
+* `fig-width: 4` & `fig-height: 4`. Set the width and height to 4 inches. 
+*  `fig-format: png`. Save the images as PNG
+* `cache: true`. Save the output results of all my chunks so that they don't need to be run again.
+* `echo: false`: I don't want any code printed by setting `echo: false`.
 
 In the `library` chunk, you put all the library calls. This helps make it clearer for anyone else who might read your work what is needed to run this document. I often go through the process of moving these `library` calls to the top of the document when I have a moment, or when I'm done writing. You can also look at Miles McBain's [`packup`](https://github.com/milesMcBain/packup) package to help move these library calls to the top of a document.
 
@@ -353,10 +317,10 @@ In the `readr` chunk, you read in any data you are going to be using in the docu
 
 Now, this is my personal preference, but I find the following benefits:
 
-1. The "top part" of your document contains all the metadata / setup info. Your global options, 
+1. The "top part" of your document contains all the metadata / setup info. Your global options. You don't need to specify every single code chunk.
 1. It helps another person get oriented with your work - they know the settings, the functions used, and the special things that you wrote (your functions)
-1. Remember, "another person" includes yourself in 6 months.
+1. Remember, "another person" includes yourself in 6 months. You are always collaborating with your future self. **You are always collaborating with your future self.**
 
 ## Your Turn {.exercise}
 
-1. Update your rmarkdown document based on the aforementioned hygiene steps discussed by Nick.
+1. Update your Quarto document based on the aforementioned hygiene steps discussed above.
