quick notes on visual mode

--- a/appendix-a-visual-vs-source-mode.qmd
+++ b/appendix-a-visual-vs-source-mode.qmd
@@ -1,7 +1,13 @@
 # Visual mode
 
+This section will be best demonstrated live in the course.
 
-This
+But needless to say, some things worth checking out:
 
+- citing papers in a linked .bib file
+- insert anything shortcut
+- insert table
+
+Warn against potential issues that may arise due to text changes from swapping to visual model
 
 There is also a [VS Code extension for visual mode](https://quarto.org/docs/visual-editor/vscode/), which this book does not (currently) focus on.
